force-app/main/default/staticresources/python/Disappear/src/objects/PublicationTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Appear_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Appear Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Appear_Role__c.isWritingRole__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Appear_Role__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>PubTeamRole</value>
            </filterItems>
            <filterItems>
                <field>Appear_Role__c.IsLogicallyDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Appear_Role__c</referenceTo>
        <relationshipLabel>Publication Team Members</relationshipLabel>
        <relationshipName>PublicationTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLogicallyDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Pub Team Member links to Contact</description>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PublicationTeams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optonal - to be filled in - if member is added from Prod Indication</description>
        <label>Product Indication</label>
        <referenceTo>ProductIndication__c</referenceTo>
        <relationshipLabel>Publication Team Members</relationshipLabel>
        <relationshipName>Publication_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>PublicationTeams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fromKeyProdInd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From Key Product Indication -&gt; R/W access to piub

all non-key Product Indication Team Members will only get Read Only Access</description>
        <label>fromKeyProdInd</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Appear_Role__c</columns>
        <columns>Product_Indication__c</columns>
        <columns>Publication__c</columns>
        <columns>Member__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>Pub-Id-048751</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PubT-{00000000}</displayFormat>
        <label>PublicationTeam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>